2008-05-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm (ENHPDF_FLUSH ENHPDF_put_text):  We correctly issue 
	save/restore requests to PDFlib, but we need to mirror these in the
	terminal code so that we track what font is currently selected.

2008-05-03  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm:  Clean up terminal code.
	Use shared routines gp_alloc(), int_expression().
	Switch to using same set of colors as other terminals (web_color_rgbs).
	Handle RGB color request by returning closest match to a known color.
	Don't over-write user colors with each new palette.
	Decouple dash pattern from line color.

	* term/fig.trm:  Extend point types to match standard sequence for the
	the first 13 types.  Accept option syntax "set term fig ... size xx,yy".
	Add a table lookup for font names known to fig, so that the terminal
	accepts for example 'set term fig font "Palatino Italic, 11"'.

	* src/tables.h src/tables.c (lookup_table_entry):  New utility routine
	for table lookup of a string, as opposed to a token index.

2008-04-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm: Remove specific references to Windows 3.1

2008-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise df_read_matrix): If missing or bad data is
	found in a matrix data file, print an int_warn() message, set the value
	to NaN if it isn't already, and return to the caller normally.
	This allows one to leave holes in a matrix data file.

	* src/graphics.c (boundary): The windows and postscript terminals place
	the xlabel text with the character baseline on the bottom edge of the
	canvas.  This causes any descenders to be clipped.  This patch leaves an
	extra 1/5 line height of empty space at the bottom.  This fixes windows
	and postscript, but introduces a small waste of space on most other
	terminal types.
	Bug #1918293

2008-04-24  Ethan A Merritt  <merritt@u.washington.edu>
