@@ -1,3 +1,10 @@
+2008-05-08  Thomas Sefzick  <thse@users.sourceforge.net>
+
+	* src/axis.c (setup_tics):  If the user specified an explicit
+	tic interval on a timefmt axis, do not change this by calling
+	quantize_time_tics().
+	Bug #1908019
+
 2008-05-08  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/pdf.trm (ENHPDF_FLUSH ENHPDF_put_text):  We correctly issue 
